# nerva-torch

./: README.md  index.html  nerva-torch.html  pyproject.toml  setup.cfg
.github/workflows/: deploy-asciidoc.yml  deploy-sphinx.yml
data/: prepare_data.py
doc/: build_asciidoc_documentation.sh  build_sphinx_documentation.sh  index.html
doc/asciidoc/: nerva-torch.adoc  settings.adoc
doc/sphinx/: conf.py
docs_sphinx/: conf.py
examples/: cifar10.sh  custom_components.py  extension_validation.py  extensions.py  mlp_construction.py  mnist.py  mnist.sh  train_mnist.py  train_synthetic.py  train_synthetic_dataset.py
scripts/: check_equations.py  make_distribution.sh  upload_distribution.sh
sphinx/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree
sphinx/_autosummary/: nerva_torch.activation_functions.html  nerva_torch.datasets.html  nerva_torch.html  nerva_torch.layers.html  nerva_torch.learning_rate.html  nerva_torch.loss_functions.html  nerva_torch.loss_functions_torch.html  nerva_torch.matrix_operations.html  nerva_torch.multilayer_perceptron.html  nerva_torch.optimizers.html  nerva_torch.softmax_functions.html  nerva_torch.training.html  nerva_torch.utilities.html  nerva_torch.weight_initializers.html
sphinx/_modules/: index.html
sphinx/_sources/: index.rst.txt
src/nerva_torch/: __init__.py  activation_functions.py  datasets.py  layers.py  (+10 more)
tests/: multilayer_perceptron_test.py  test_datasets_basics.py  test_learning_rate_schedulers.py  test_loss_functions.py  test_matrix_operations_basics.py  test_multilayer_perceptrons.py  test_one_layer.py  test_optimizers_basics.py  test_softmax_functions_basics.py  test_utilities.py  utilities.py
tools/: mlp.py
(+45 files in other folders)
