[metadata]
name = nerva-torch
version = 0.3
author = Wieger Wesselink
author_email = j.w.wesselink@tue.nl
description = An implementation of multilayer perceptrons in PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiegerw/nerva-torch
project_urls =
    Bug Tracker = https://github.com/wiegerw/nerva-torch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
    Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >= 3.10
install_requires =
    numpy >= 1.21
    torch >= 1.12
    torchvision >= 0.13
    scikit-learn >= 1.1

[options.packages.find]
where = src
